fix: 불필요한 z-index 제거

--- a/app/src/components/pages/Detail/index.css
+++ b/app/src/components/pages/Detail/index.css
@@ -7,6 +7,5 @@
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 8;
     overflow: hidden;
 }
